--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -72,8 +72,8 @@ endif ()
 
 add_executable(ss_local ${SOURCE_FILES_LOCAL})
 #add_executable(ss_tunnel ${SOURCE_FILES_TUNNEL})
-#add_executable(ss_server ${SOURCE_FILES_SERVER})
-#add_executable(ss_manager ${SOURCE_FILES_MANAGER})
+add_executable(ss_server ${SOURCE_FILES_SERVER})
+add_executable(ss_manager ${SOURCE_FILES_MANAGER})
 add_executable(ss_redir ${SOURCE_FILES_REDIR})
 add_library(libshadowsocks-libev ${SOURCE_FILES_LOCAL})
 
@@ -83,12 +83,12 @@ set_target_properties(ss_local PROPERTIES
 #set_target_properties(ss_tunnel PROPERTIES
 #        COMPILE_DEFINITIONS MODULE_TUNNEL
 #        )
-#set_target_properties(ss_server PROPERTIES
-#        COMPILE_DEFINITIONS MODULE_REMOTE
-#        )
-#set_target_properties(ss_manager PROPERTIES
-#        COMPILE_DEFINITIONS MODULE_MANAGER
-#        )
+set_target_properties(ss_server PROPERTIES
+        COMPILE_DEFINITIONS MODULE_REMOTE
+        )
+set_target_properties(ss_manager PROPERTIES
+        COMPILE_DEFINITIONS MODULE_MANAGER
+        )
 set_target_properties(ss_redir PROPERTIES
         COMPILE_DEFINITIONS MODULE_REDIR
         )
@@ -121,12 +121,12 @@ target_link_libraries(ss_local
 #target_link_libraries(ss_tunnel
 #        ${ss_lib_net}
 #        )
-#target_link_libraries(ss_server
-#        ${ss_lib_net}
-#        )
-#target_link_libraries(ss_manager
-#        ${ss_lib_common}
-#        )
+target_link_libraries(ss_server
+        ${ss_lib_net}
+        )
+target_link_libraries(ss_manager
+        ${ss_lib_common}
+        )
 target_link_libraries(ss_redir
         ${ss_lib_net}
         )
