First stage of changes towards implementing full ShadowsocksR support in ssr-server. At least everyhing compiles cleanly...

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,3 +12,6 @@ ACLOCAL_AMFLAGS = -I m4
 
 pkgconfiglibdir = $(libdir)/pkgconfig
 pkgconfiglib_DATA = shadowsocks-libev.pc
+
+distclean:
+	rm -f *.im
